<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SeekBar
        android:id="@+id/seekBarBrightness"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/buttonRainbow"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="25dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHortMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <Button
        android:id="@+id/buttonFlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startFlashActivity"
        android:text="@string/flash"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <ToggleButton
        android:id="@+id/buttonSOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:onClick="sosButton"
        android:text="@string/sos"
        android:textOff="@string/sos"
        android:textOn="@string/sos"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHortMid"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertMid"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintVertical_bias="0.70" />

    <Button
        android:id="@+id/buttonMors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="morsButton"
        android:text="@string/morse"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHortMid"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertMid"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintVertical_bias="0.70" />

    <Button
        android:id="@+id/buttonPreColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changePreColor"
        android:text="@string/change_color"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertMid"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHortMid"
        app:layout_constraintVertical_bias="0.30" />

    <Button
        android:id="@+id/buttonRGB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="rgbColor"
        android:text="@string/rgb"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertMid"
        app:layout_constraintTop_toTopOf="@+id/guidelineHortMid"
        app:layout_constraintVertical_bias="0.30" />

    <ToggleButton
        android:id="@+id/buttonRainbow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:onClick="rainbow"
        android:text="@string/rainbow"
        android:textOff="@string/rainbow"
        android:textOn="@string/rainbow"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop"
        app:layout_constraintVertical_bias="0.20" />

</androidx.constraintlayout.widget.ConstraintLayout>